--- a/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowSubscribedList.cshtml
@@ -1,45 +1,65 @@
-﻿
+﻿@model IEnumerable<OneListApplication.ViewModels.ListViewVM>
+
 @{
-    ViewBag.Title = "ShowSubscribedList";
+    ViewBag.Title = "Suscribed Lists";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 @Html.Partial("~/Views/List/_ListSideBar.cshtml")
 <div class="col-md-10">
-    <h2>Subscribed Lists</h2>
+    <h2>List Management</h2>
+    <p class="text-danger">
+        @Html.Raw(ViewBag.ErrorMsg)
+    </p>
+    <p class="text-info">
+        @Html.Raw(ViewBag.ActionMsg)
+    </p>
     <table class="table">
-        <thead class="thead-inverse">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ListName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreationDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ListType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.suscriberRole)
+            </th>
+
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
             <tr>
-                <th>#</th>
-                <th>Open Lists</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Winter Sports Supply</td>
                 <td>
-                    <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
-                    <a class="btn btn-warning">Unsubscribe</a>
+                    @Html.DisplayFor(modelItem => item.ListName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreationDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ListType)
+                </td>
+                <td>
+                    <ul id="suscribers">
+                        @Html.DisplayFor(modelItem => item.suscriberRole)
+                    </ul>
+                </td>
+
+                <td>
+                    @if (item.UserType != 3)
+                    {
+                        @Html.ActionLink("EditList", "List", new { id = item.ListID }, new { @class = "btn btn-primary" })
+                    }
+                    
+                    <a class="btn btn-warning" href="@Url.Action("ViewList","List",  new { id = item.ListID})"><i class="fa fa-eye" aria-hidden="true"></i></a>
                 </td>
             </tr>
-            <tr>
-                <td>2</td>
-                <td>Cake Ingredients</td>
-                <td>
-                    <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
-                    <a class="btn btn-warning">Unsubscribe</a>
-                </td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Paul's X-mas Shopping List</td>
-                <td>
-                    <a class="btn btn-warning"><em class="fa fa-eye"></em></a>
-                    <a class="btn btn-warning">Unsubscribe</a>
-                </td>
-            </tr>
-        </tbody>
+        }
+
     </table>
-    @Html.ActionLink("Back to Lists", "ListManagement", "Home", new { @class = "btn btn-primary" }, null)
 </div>
