--- a/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
@@ -25,6 +25,7 @@
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.ListName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ListName, "", new { @class = "text-danger" })
+                    <p class="text-danger">@Html.Raw(ViewBag.InputErrorMsg)</p>
                 </div>
             </div>
             <div class="form-group">
