--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -54,6 +54,7 @@
                     <div class="col-md-12 col-sm-12">
                         <h4>To Do</h4>
                         <ul>
+                            <li><a href="#">Brainstorm What to show on dashboard page</a></li>
                             <li><a href="#">Not to show expired coupons from API</a></li>
                             <li><a href="#">CSS: mobile responsive</a></li>
                             <li><a href="#">Add Validation/Error message for all</a></li>
