--- a/OneListApplication/OneListApplication/Views/Item/ItemCategoryDetail.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemCategoryDetail.cshtml
@@ -6,7 +6,7 @@
 }
 
 @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
-<div class="col-md-8">
+<div class="col-md-8 col-sm-12">
     <h2>ItemCategoryDetail</h2>
 
     <div>
