--- a/OneListApplication/OneListApplication/Views/Item/ItemCategoryManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemCategoryManagement.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
-<div class="col-md-8">
+<div class="col-md-8 col-sm-12">
     <h2>All Categories</h2>
     <p class="text-danger">
         @Html.Raw(ViewBag.ItemCategoryActionMsg)
@@ -25,8 +25,8 @@
                     @Html.DisplayFor(modelItem => item.ItemCategoryName)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "EditItemCategory", "Item", new { id = item.ItemCategoryID }, new { @class = "btn btn-primary" }) |
-                    @Html.ActionLink("Details", "ItemCategoryDetail", "Item", new { id = item.ItemCategoryID }, new { @class = "btn btn-primary" }) |
+                    @Html.ActionLink("Edit", "EditItemCategory", "Item", new { id = item.ItemCategoryID }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Details", "ItemCategoryDetail", "Item", new { id = item.ItemCategoryID }, new { @class = "btn btn-primary" })
                     <a class="btn btn-danger" href="@Url.Action("DeleteItemCategory","Item", new { id = item.ItemCategoryID})")"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
                 </td>
             </tr>
