--- a/OneListApplication/OneListApplication/Views/Item/_ItemPageTopNav.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/_ItemPageTopNav.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="col-md-4">
+﻿<div class="col-md-4 col-sm-12">
     <ul class="nav navbar-nav side-nav">
         <li class="active">
             <a class="nav-link active" href="@Url.Action("ItemManagement", "Item")"><i class="fa fa-shopping-basket" aria-hidden="true"></i>&nbsp;&nbsp;All Items</a>
