--- a/OneListApplication/OneListApplication/Views/Item/EditItem.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/EditItem.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
-<div class="col-md-8">
+<div class="col-md-8 col-sm-12">
     <h2>EditItem</h2>
     @using (Html.BeginForm())
     {
