--- a/OneListApplication/OneListApplication/Views/Subscriber/SubscriberGroupManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/SubscriberGroupManagement.cshtml
@@ -8,30 +8,33 @@
 
 @Html.Partial("~/Views/Subscriber/_SubscriberSideBar.cshtml")
 
-<div class="col-md-8">
+<div class="col-md-8 col-sm-12">
     <h2>All Subscriber Groups</h2>
     <p class="text-danger">
         @Html.Raw(ViewBag.ActionMsg)
     </p>
     <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.SubscriberGroupName)
-            </th>
-            <th></th>
-        </tr>
-
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.SubscriberGroupName)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SubscriberGroupName)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "EditSubscriberGroup", new { id = item.SubscriberGroupID }, new { @class = "btn btn-primary" })
-                    <a class="btn btn-danger" href="@Url.Action("DeleteSubscriberGroup","Subscriber", new { id = item.SubscriberGroupID })"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-                </td>
-            </tr>
+            <tbody>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SubscriberGroupName)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "EditSubscriberGroup", new { id = item.SubscriberGroupID }, new { @class = "btn btn-primary" })
+                        <a class="btn btn-danger" href="@Url.Action("DeleteSubscriberGroup","Subscriber", new { id = item.SubscriberGroupID })"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                    </td>
+                </tr>
+            </tbody>
         }
 
     </table>
