--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -44,14 +44,17 @@
             <div class="col-lg-8">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">
+                        <h2 class="page-header">
                             Hey, @Html.Raw(User.Identity.Name)
-                        </h1>
+                        </h2>
                     </div>
                 </div>
                 <!-- /.row -->
                 <div class="row" id="listType">
                     <div class="col-md-12 col-sm-12">
+                        @*<div class="big-button">@Html.ActionLink("List Managment", "ListManagement", "Home")</div>
+                        <div class="big-button">@Html.ActionLink("Item Mangement", "ItemManagement", "Item")</div>
+                        <div class="big-button">@Html.ActionLink("Subscriber Management", "SubscriberGroupManagement", "Subscriber")</div>*@
                         <h4>To Do</h4>
                         <ul>
                             <li><a href="#">Brainstorm What to show on dashboard page</a></li>
@@ -59,16 +62,20 @@
                             <li><a href="#">CSS: mobile responsive</a></li>
                             <li><a href="#">Add Validation/Error message for all</a></li>
                             <li><a href="#">User Profile Edit currently not server side validation</a></li>
-                            <li><a href="#">Assign Roles -> generate roles from db to dropdown</a></li>
-                            <li><a href="#">Make sure all users need to fill in first and last names</a></li>
                             <li><a href="#">Dummy Data cleanup in DB</a></li>
                             <li><a href="#">Clean up codes</a></li>
                             <li><a href="#">Organize code with repos</a></li>
                         </ul>
                         <h4>Nice-To-Have</h4>
                         <ul>
+                            <li><a href="#">Sorting for all tables</a></li>
+                            <li><a href="#">Loading icon for the specials while it loads</a></li>
                             <li><a href="#">Add scroll to API part</a></li>
                             <li><a href="#">Pagination on all Tables</a></li>
+                            <li><a href="#">Add 'active' class to main nav state</a></li>
+                            <li><a href="#">Force footer to show up at the btm of the page</a></li>
+                            <li><a href="#">Assign Roles -> generate roles from db to dropdown</a></li>
+                            <li><a href="#">Make sure all users need to fill in first and last names</a></li>
                             <li><a href="#">Fix typo in database</a></li>
                         </ul>
                     </div>
