--- a/OneListApplication/OneListApplication/Views/Home/Register.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Register.cshtml
@@ -29,7 +29,7 @@
                 @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
                 <div class="g-recaptcha" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>
                 <div class="text-center">
-                    <button class="btn btn-primary btn-register" type="submit">Register</button><br />
+                    <button class="btn btn-bk btn-register" type="submit">Register</button><br />
                 </div>
         }
         @Html.Raw(ViewBag.Result)
