--- a/OneListApplication/OneListApplication/Views/Home/UnbanUser.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/UnbanUser.cshtml
@@ -19,7 +19,7 @@
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            <button class="btn btn-primary" type="submit">Unban</button>
+            <button class="btn btn-bk btn-full-size" type="submit">Unban</button>
             @{
                 if (ViewBag.Fail != null)
                 {
