--- a/OneListApplication/OneListApplication/Css/index.css
+++ b/OneListApplication/OneListApplication/Css/index.css
@@ -7,15 +7,48 @@
 /*  link-colors */
 a,
 a:visited {
-    color:orangered;
+    color: slategrey;
 }
-
+/*  image-styles */
+img {
+    max-width: 100%;
+}
 /*  button-colors */
 .btn-bk {
-    background-color:black !important;
-    color:white;
+    background-color: slategrey !important;
+    color:white !important;
+    margin-bottom:20px;
 }
 
+.btn-full-size {
+    padding: 5px 30px;
+}
+
+.big-button a {
+    display:block;
+    text-align:center;
+    line-height:50px;
+    width: 32%;
+    height: 50px;
+    margin-right:1%;
+    margin-bottom: 1%;
+    float:left;
+    background-color: slategray;
+    color:white;
+    font-size:1.1em;
+}
+.big-button a:hover {
+    text-decoration:unset;
+}
+#listType h4{
+    clear:both;
+}
+/*  form select tag styles */
+select {
+    height: 40px;
+    padding-left:15px;
+    width:100%;
+}
 /*  text-styles */
 h1, h2, h3, h4, h5, p, a, label, button {
     font-family: 'Rubik', sans-serif;
@@ -23,6 +56,8 @@ h1, h2, h3, h4, h5, p, a, label, button {
 
 #coupon h3 {
     text-align: center;
+    color: slategray;
+    margin-bottom:20px;
 }
 
 input {
@@ -57,8 +92,9 @@ footer {
 
 /* coupons */
 #coupon > ul > div {
-    background-color: #ededed;
-    color: black;
+
+    border:1px solid slategray;
+    color: slategray;
     padding: 15px;
     border-radius: 10px;
     margin-bottom: 15px;
@@ -68,10 +104,6 @@ footer {
 .form-control {
     height: 45px !important;
     border-radius: 15px;
-}
-
-body {
-    /*background-color: white !important;*/
 }
 
 @media(max-width:768px) {
@@ -84,9 +116,7 @@ body {
     border-radius: 15px;
     box-shadow: 1px 1px 3px #777777;
 }
-#coupon {
-     /*border-left:1px solid #ededed;*/
-}
+
 
 
 li.nav-item {
@@ -175,38 +205,78 @@ footer {
     text-align:center;
 }
 
+.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+    max-height:none !important;
+}
 #dropdownMenu1 {
     margin-top:18px;
 }
 
 @media(max-width:768px){
     #dropdownMenu1 {
-        display: none;
+        width: 100%;
+        height: 60px;
+        border-radius: 0;
+        box-shadow: none;
+        background-color: #222;
+        color: orangered;
+        border: none;
+    }
+    #dropdownMenu1:hover {
+        background-color: #555;
+        color:white;
+    }
+    .navbar-right {
+        margin-top:0;
+    }
+    .dropdown-menu li {
+        background-color: #555;
+    }
+
+}
+
+@media(max-width: 992px) {
+    .side-nav > li a{
+        background-color: #222 !important;
+        color: white;
+        border-bottom: 1px solid white !important;
+    }
+    .side-nav > li a:hover {
+        background-color: #444 !important;
+    }
+    .col-md-4 {
+        padding: 0 !important;
+    }
+    .col-md-4 ul {
+        padding-left: 0 !important;
+    }
+    .navbar-nav {
+        margin: 0;
+    }
+    .side-nav {
+        padding: 0 !important;
     }
 }
 @media(min-width:768px) {
-
-
     .navbar-left {
         padding-top: 15px;
         padding-left: 20px;
     }
 
-        .navbar-left li a {
-            background-color: #444444;
-            border-radius: 15px;
-            color: white !important;
-            line-height: 1 !important;
-            padding: 7px;
-            margin-left: 10px;
-            transition: 0.5s;
-            border: 2px solid black;
-        }
+    .navbar-left li a {
+        background-color: #444444;
+        border-radius: 15px;
+        color: white !important;
+        line-height: 1 !important;
+        padding: 7px;
+        margin-left: 10px;
+        transition: 0.5s;
+        border: 2px solid black;
+    }
 
-            .navbar-left li a:hover {
-                border: 2px solid white;
-            }
-
+    .navbar-left li a:hover {
+        border: 2px solid white;
+    }
 
     .collapse.navbar-collapse.navbar-ex1-collapse {
         float: left;
@@ -341,3 +411,8 @@ td .btn {
 	.table-collapse td:before { content: attr(data-title); }
 }
 
+/* ---- subscribers ------*/
+.subscriber-input {
+    height: 32px !important;
+    padding-left: 10px;
+}
