--- a/OneListApplication/OneListApplication/Views/Home/AddUserToRole.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/AddUserToRole.cshtml
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            <button class="btn btn-primary" type="submit">Assign</button>
+            <button class="btn btn-bk btn-full-size" type="submit">Assign</button>
         </div>
     </div>
  }
