--- a/OneListApplication/OneListApplication/Views/Item/CreateItem.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/CreateItem.cshtml
@@ -35,14 +35,14 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ItemCategory, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(m => m.ItemCategory, Model.ItemCategoryList, htmlAttributes: new { @class = "form-control" })
-                    <p>*Items cannot be created without categories</p>
+                    @Html.DropDownListFor(m => m.ItemCategory, Model.ItemCategoryList, htmlAttributes: new { @class = "" })
+                    <p style="color:#999;padding-top:5px;">*Items cannot be created without categories</p>
                 </div>
                 
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-bk" />
                 </div>
             </div>
         </div>
