--- a/OneListApplication/OneListApplication/Views/Profile/ChangePassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Profile/ChangePassword.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <div>
-                    <input type="submit" class="btn btn-primary" value="Submit" />
+                    <input type="submit" class="btn btn-bk" value="Submit" />
                 </div>
                 <input type="hidden" name="passwordToken" value="@ViewBag.PasswordToken" />
                 <input type="hidden" name="userID" value="@ViewBag.UserID" /><br />
