--- a/OneListApplication/OneListApplication/Views/Profile/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Profile/Index.cshtml
@@ -10,8 +10,8 @@
     {
         @Html.HiddenFor(model => model.UserName)
         <h3 for="selectItemGroup" style="float:left; width:100%; text-align:center">User Profile</h3>
-        <img src="https://kenanfellows.org/wp-content/uploads/2016/02/blank-profile-picture-973460_960_720.png" style="float:left ; width:50%; width:200px; height:200px;" />
-        <table class="table table-inverse" style="float:left ; width:50%">
+        <img class="profile-pic" src="https://kenanfellows.org/wp-content/uploads/2016/02/blank-profile-picture-973460_960_720.png" style="float:left ; width:50%; width:200px; height:200px;" />
+        <table class="table profile-table table-inverse">
             <thead>
                 <tr>
                     <th>Details</th>
@@ -66,7 +66,7 @@
                 </tr>
                 <tr>
                     <td>Password</td>
-                    <td><button class="btn btn-primary" onclick="location.href='@Url.Action("ChangePassword", "Profile")';return false;">Change Password</button></td>
+                    <td><button class="btn btn-bk" onclick="location.href='@Url.Action("ChangePassword", "Profile")';return false;">Change Password</button></td>
                     <td></td>
                 </tr>
             </tbody>
