--- a/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberTable.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberTable.cshtml
@@ -5,8 +5,8 @@
             <tr>
                 <th>Name</th>
                 <th>Email</th>
-                <th>User Type</th>
-                <th>User Status</th>
+                <th>Type</th>
+                <th>Status</th>
                 <th></th>
             </tr>
         </thead>
@@ -18,7 +18,7 @@
                     <td data-title="Email">
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
-                    <td data-title="Status">
+                    <td data-title="Type">
                         @if (item.UserTypeID == 2)
                         {
                             @Html.Raw("Collaborator")
@@ -29,12 +29,12 @@
 
                         }
                     </td>
-                    <td data-title="User Status">
+                    <td data-title="Status">
                         @Html.DisplayFor(modelItem => item.ListUserStatus)
                     </td>
                     <td>
-                        @Html.ActionLink("Change Type", "ChangeSubscriberType", "Subscriber", new { userId = item.UserID, id = Model.SubscriberGroupID, type = item.ListUserStatus }, new { @class = "btn btn-primary" })
-                        @Html.ActionLink("Change Status", "ChangeSubscriberStatus", "Subscriber", new { userId = item.UserID, id = Model.SubscriberGroupID }, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Change Type", "ChangeSubscriberType", "Subscriber", new { userId = item.UserID, id = Model.SubscriberGroupID, type = item.ListUserStatus }, new { @class = "btn btn-bk" })
+                        @Html.ActionLink("Change Status", "ChangeSubscriberStatus", "Subscriber", new { userId = item.UserID, id = Model.SubscriberGroupID }, new { @class = "btn btn-bk" })
 
                         <a class="btn btn-danger" href="@Url.Action("DeleteSubscriber", "Subscriber", new { userId = item.UserID, id = Model.SubscriberGroupID })"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
                     </td>
