--- a/OneListApplication/OneListApplication/Views/Item/EditItem.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/EditItem.cshtml
@@ -12,18 +12,16 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>ItemVM</h4>
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.ItemID)
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.ItemName, htmlAttributes: new { @class = "control-label col-md-2" })
