--- a/OneListApplication/OneListApplication/Views/Profile/ChangePassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Profile/ChangePassword.cshtml
@@ -34,9 +34,19 @@
                 </div>
                 <input type="hidden" name="passwordToken" value="@ViewBag.PasswordToken" />
                 <input type="hidden" name="userID" value="@ViewBag.UserID" /><br />
-                <p class="text-success">
-                    @Html.Raw(ViewBag.Result)
-                </p>
+                @{
+                   if (ViewBag.Success!=null)
+                    {
+                        <p class="text-success">
+                            @Html.Raw(ViewBag.Success)
+                        </p>
+                    }
+                    else{
+                        <p class="text-danger">
+                            @Html.Raw(ViewBag.Fail)
+                        </p>
+                    }
+                }
             </div> 
             <div class="form-group">
                 @Html.ActionLink("Back to Profile", "Index")
